--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Assets\Scripts\Models\UserData.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\DBManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerCache.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Enemies\ME_EnemyHurtbox.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\UI\Damage Numbers\ME_DamageNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
