--- a/MitybosPrograma/Assembly-CSharp.csproj
+++ b/MitybosPrograma/Assembly-CSharp.csproj
@@ -67,15 +67,17 @@
     <Compile Include="Assets\Scripts\Game\Jump\JumpCameraFollow.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\Weapons\Hot Sauce Trailblazer\ME_HotSauceTrailblazer.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Animator.cs" />
-    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Projectile_Lightning.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Lightning_Projectile.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\Player\ME_Player.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerExtensions.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_DayButton_Pool.cs" />
     <Compile Include="Assets\Scripts\Main\GameSelect.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialManager.cs" />
+    <Compile Include="Assets\Scripts\Models\LevelCoins.cs" />
     <Compile Include="Assets\Scripts\Survey\SliderScript.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\IClientInterface.cs" />
     <Compile Include="Assets\UI\TableLayout\TableRow.cs" />
+    <Compile Include="Assets\Scripts\Game\Harvest\VitaminHarvestOrdersManager.cs" />
     <Compile Include="Assets\UI\TableLayout\TableCell.cs" />
     <Compile Include="Assets\Scripts\Game\Coin.cs" />
     <Compile Include="Assets\Scripts\Game\Harvest\SortingLayerSorter.cs" />
@@ -87,6 +89,7 @@
     <Compile Include="Assets\Scripts\UI-DBmethods\ClientMethods.cs" />
     <Compile Include="Assets\UI\TableLayout\Example\TableLayoutExampleController.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Instantiation.cs" />
+    <Compile Include="Assets\Scripts\Game\Harvest\CustomerMovement.cs" />
     <Compile Include="Assets\Scripts\Search\FoodSearch.cs" />
     <Compile Include="Assets\UI\DatePicker\SerializableDate.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\Chair.cs" />
@@ -107,7 +110,7 @@
     <Compile Include="Assets\Scripts\Main\CameraScroll.cs" />
     <Compile Include="Assets\Scripts\Calculations\BmiCalories.cs" />
     <Compile Include="Assets\Scripts\Models\ScoresChickenWings.cs" />
-    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Projectile_Bullet.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Bullet_Projectile.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\UI\Healthbar\Healthbar.cs" />
     <Compile Include="Assets\Prefabs\Scroller\ScrollerPrefab.cs" />
     <Compile Include="Assets\Scripts\Login\LoginManager.cs" />
@@ -118,8 +121,10 @@
     <Compile Include="Assets\Scripts\Game\Jump\JumpPlayerController.cs" />
     <Compile Include="Assets\Scripts\unity_auth\LoginController.cs" />
     <Compile Include="Assets\Scripts\Main\SegmentInformation.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Explosion_Projectile.cs" />
     <Compile Include="Assets\Scripts\Survey\ButtonTransitions.cs" />
     <Compile Include="Assets\Scripts\Game\Harvest\VitaminHarvestItemManager.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\Meateor Ball\ME_MeateorBall.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\Weapons\ME_PowerUpHandler.cs" />
     <Compile Include="Assets\Scripts\Survey\Congrats.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\Enemies\ME_Enemy.cs" />
@@ -130,7 +135,7 @@
     <Compile Include="Assets\Scripts\Game\PauseManager.cs" />
     <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerUtilities.cs" />
-    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Projectile_Puddle.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Puddle_Projectile.cs" />
     <Compile Include="Assets\Input\PlayerInput.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\JumpGameManager.cs" />
     <Compile Include="Assets\Scripts\Main\MainManager.cs" />
@@ -138,6 +143,7 @@
     <Compile Include="Assets\Scripts\Game\Harvest\VitaminHarvestPlayerManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_HoldButton.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\BranchAndBound.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Tracker_Projectile.cs" />
     <Compile Include="Assets\Scripts\Models\ScoresMagicExpedition.cs" />
     <Compile Include="Assets\Scripts\Game\Magic\Player\ME_PlayerHurtbox.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_DayButton.cs" />
@@ -158,14 +164,15 @@
     <Compile Include="Assets\Scripts\Game\Magic\Weapons\Carrot Saber\ME_CarrotSaber.cs" />
     <Compile Include="Assets\UI\DatePicker\Example\ExampleController.cs" />
     <Compile Include="Assets\Scripts\Game\Jump\Booster.cs" />
+    <Compile Include="Assets\Scripts\Game\Harvest\OrdersTable.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePicker_Config.cs" />
     <Compile Include="Assets\Scripts\PlanCreation\PlanCreation\FoodClass.cs" />
-    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Projectile_Sword.cs" />
+    <Compile Include="Assets\Scripts\Game\Magic\Weapons\_Projectile Type\ME_Sword_Projectile.cs" />
     <Compile Include="Assets\Prefabs\Scoreboard\Scoreboard.cs" />
     <Compile Include="Assets\Scripts\Models\UserData.cs" />
+    <Compile Include="Assets\Scripts\Game\Harvest\CustomerTable.cs" />
     <Compile Include="Assets\Scripts\UI-DBmethods\DBManager.cs" />
     <Compile Include="Assets\UI\DatePicker\DatePickerCache.cs" />
-    <Compile Include="Assets\Scripts\Models\LevelCoins.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
