--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 Projektas/Library/
 /MitybosPrograma/UserSettings/Layouts/default-2021.dwlt
+/MitybosPrograma/Packages
