--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,4 @@ crashlytics-build.properties
 Projektas/Library/
 /MitybosPrograma/UserSettings/Layouts/default-2021.dwlt
 /MitybosPrograma/Packages
-/Rinkos analize ir prototipas
+/Rinkos_analize_ir_prototipas
